Scafolding of job-finder platform

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,10 +35,10 @@
   </div>
 
   <div class="card">
-    <h3 class="card__heading">Super Lancer Template</h3>
-    <p class="card__description">This is a website template to find jobs ans freelancers.
+    <h3 class="card__heading">Job Finder Template</h3>
+    <p class="card__description">This is a website template to find jobs and post jobs.
       This website is built using HTML, CSS and Angular.</p>
-    <button routerLink="super-lancer"
+    <button routerLink="job-finder"
     >View Template
     </button>
   </div>
