Updates - Create main page components - Update suggested job component

--- a/src/app/modules/job-finder/components/landing/landing.component.html
+++ b/src/app/modules/job-finder/components/landing/landing.component.html
@@ -81,3 +81,14 @@
         </button>
     </div>
 </div>
+<div class="content-wrapper">
+    <div class="side-box">
+        <app-suggested-job></app-suggested-job>
+    </div>
+    <div class="side-box">
+        <app-featured-job></app-featured-job>
+    </div>
+    <div class="side-box">
+        <app-popular-company></app-popular-company>
+    </div>
+</div>
