--- a/src/app/modules/job-finder/components/suggested-job/suggested-job.component.html
+++ b/src/app/modules/job-finder/components/suggested-job/suggested-job.component.html
@@ -48,4 +48,19 @@
 			2 day ago . 23 Applied
 		</div>
 	</div>
+	<div class="suggest-box suggest">
+		<div class="suggest__header">
+			<span class="img-wrapper"><img src="../../../../../assets/img/figma.png" alt=""></span>
+			<h3>Figma</h3>
+		</div>
+		<div class="suggest__title">
+			Junior UX Designer
+		</div>
+		<div class="suggest__content">
+			<p>Product Technologies</p>
+		</div>
+		<div class="suggest__footer">
+			2 day ago . 23 Applied
+		</div>
+	</div>
 </div>
