--- a/src/app/modules/job-finder/components/suggested-job/suggested-job.component.scss
+++ b/src/app/modules/job-finder/components/suggested-job/suggested-job.component.scss
@@ -1,3 +1,5 @@
+@import "src/styles/job-finder";
+
 .side-info {
   display: flex;
   align-items: center;
@@ -32,7 +34,7 @@
 .suggest__footer{
   margin-top: 2em;
   font-size: 13px;
-  color: #A7A7A7;
+  color: #858585;
 }
 .img-wrapper {
   display: inline-block;
