--- a/src/styles/_job-finder.scss
+++ b/src/styles/_job-finder.scss
@@ -19,3 +19,39 @@ h1,h2,h3,h4,h5,h6,a,p {
 a {
     text-decoration: none;
 }
+
+.main-wrapper {
+    background: white;
+    padding: 1em 2em;
+    border-radius: 10px;
+
+    h3 {
+        margin-bottom: 1em;
+    }
+}
+
+.section-wrapper {
+    padding: 1em;
+    border: 1px solid #e2e2e2;
+    border-radius: 10px;
+    margin-bottom: 1.5em;
+}
+
+.img-wrapper {
+    display: inline-block;
+    background: #f7e0d77a;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    position: relative;
+    margin-right: 1em;
+    
+    img {
+        height: 24px;
+        width: 24px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
