--- a/src/app/modules/job-finder/components/header/header.component.html
+++ b/src/app/modules/job-finder/components/header/header.component.html
@@ -1,23 +1,39 @@
 <div class="header">
-    <div class="header-left">
-        <div class="header-left__logo">
+	<div class="header-left">
+		<div class="header-left__logo">
 			<p>JF</p>
 			<h1>JobFinder</h1>
 		</div>
 		<div class="header-left__menu">
 			<ul>
-				<li><a href="#" class="active">Home</a></li>
-				<li><a href="#" >My Jobs</a></li>
+				<li>
+					<a href="#" routerLink="./home" routerLinkActive="active"
+						>Home</a
+					>
+				</li>
+				<li><a href="#">My Jobs</a></li>
 				<li><a href="#">Messages</a></li>
 				<li><a href="#">Community</a></li>
-				<li><a href="#">FAQ</a></li>
+				<li>
+					<a href="#" routerLink="./faq" routerLinkActive="active"
+						>FAQ</a
+					>
+				</li>
 			</ul>
 		</div>
-    </div>
-    <div class="header-right">
+	</div>
+	<div class="header-right">
 		<ul>
-			<li><a href="#"><app-svg-icon [svgIconId]="'bell'"></app-svg-icon></a></li>
-			<li><a href="#"><app-svg-icon [svgIconId]="'user'"></app-svg-icon></a></li>
+			<li>
+				<a href="#"
+					><app-svg-icon [svgIconId]="'bell'"></app-svg-icon
+				></a>
+			</li>
+			<li>
+				<a href="#"
+					><app-svg-icon [svgIconId]="'user'"></app-svg-icon
+				></a>
+			</li>
 			<li><a href="#" class="btn-link">Post a job</a></li>
 		</ul>
 	</div>
