Updates - Added Q before the questions and A before the answer - Added styling to single FAQ section and the heading

--- a/src/app/modules/job-finder/components/faq/faq.component.html
+++ b/src/app/modules/job-finder/components/faq/faq.component.html
@@ -3,7 +3,7 @@
 	<div class="accordion-panel">
 		<button class="accordion-button" (click)="toggleAccordion($event)">
 			<span class="accordion-heading"
-				>How can I post a job listing on the platform?</span
+				>Q. How can I post a job listing on the platform?</span
 			>
 			<app-svg-icon
 				svgIconId="down-arrow"
@@ -13,7 +13,7 @@
 		</button>
 		<div class="accordion-body">
 			<p>
-				Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+				A. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
 				Necessitatibus, quas.
 			</p>
 		</div>
@@ -22,7 +22,7 @@
 	<div class="accordion-panel">
 		<button class="accordion-button" (click)="toggleAccordion($event)">
 			<span class="accordion-heading"
-				>Is there a cost associated with posting job listings?</span
+				>Q. Is there a cost associated with posting job listings?</span
 			>
 			<app-svg-icon
 				svgIconId="down-arrow"
@@ -32,7 +32,7 @@
 		</button>
 		<div class="accordion-body">
 			<p>
-				Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+				A. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
 				Necessitatibus, quas.
 			</p>
 		</div>
@@ -41,7 +41,7 @@
 	<div class="accordion-panel">
 		<button class="accordion-button" (click)="toggleAccordion($event)">
 			<span class="accordion-heading"
-				>Can I save job listings to view or apply to later?</span
+				>Q. Can I save job listings to view or apply to later?</span
 			>
 			<app-svg-icon
 				svgIconId="down-arrow"
@@ -51,7 +51,7 @@
 		</button>
 		<div class="accordion-body">
 			<p>
-				Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+				A. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
 				Necessitatibus, quas.
 			</p>
 		</div>
@@ -59,7 +59,7 @@
 	<div class="accordion-panel">
 		<button class="accordion-button" (click)="toggleAccordion($event)">
 			<span class="accordion-heading"
-				>Can I search for jobs without creating an account?</span
+				>Q. Can I search for jobs without creating an account?</span
 			>
 			<app-svg-icon
 				svgIconId="down-arrow"
@@ -69,7 +69,7 @@
 		</button>
 		<div class="accordion-body">
 			<p>
-				Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+				A. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
 				Tempore expedita assumenda explicabo aspernatur! Ut nam minus
 				aliquid optio laboriosam eius, dignissimos recusandae quibusdam
 				placeat, autem, quos laudantium eaque at delectus?
@@ -79,7 +79,7 @@
 	<div class="accordion-panel">
 		<button class="accordion-button" (click)="toggleAccordion($event)">
 			<span class="accordion-heading"
-				>Can I edit or update my job listing after it's been
+				>Q. Can I edit or update my job listing after it's been
 				posted?</span
 			>
 			<app-svg-icon
@@ -90,9 +90,9 @@
 		</button>
 		<div class="accordion-body">
 			<p>
-				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis
-				ducimus hic repellat molestiae deleniti voluptatum voluptas
-				optio quae quasi iusto.
+				A. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+				Omnis ducimus hic repellat molestiae deleniti voluptatum
+				voluptas optio quae quasi iusto.
 			</p>
 		</div>
 	</div>
