--- a/src/app/modules/job-finder/components/faq/faq.component.scss
+++ b/src/app/modules/job-finder/components/faq/faq.component.scss
@@ -2,12 +2,16 @@
 
 .content-wrapper {
 	padding: 3em;
-	background: #e8f2fb;
 }
 
 h2 {
 	margin-bottom: 1.5em;
 }
+
+.accordion-panel {
+	box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.25);
+}
+
 .accordion-panel + .accordion-panel {
 	margin-top: 24px;
 }
@@ -60,4 +64,8 @@ h2 {
 	transition: all 0.5s ease-in;
 	height: auto;
 	overflow-y: auto;
+}
+.accordion-heading {
+	font-weight: bold;
+	font-family: $font-family;
 }
