Updates - Added bacground color and min height to the FAQ page - Introduced a variable for the background color

--- a/src/app/modules/job-finder/components/landing/landing.component.scss
+++ b/src/app/modules/job-finder/components/landing/landing.component.scss
@@ -100,7 +100,7 @@ button svg {
 }
 
 .content-wrapper {
-	background: #e8f2fb;
+	background: $bg-clr;
 	display: grid;
 	grid-template-columns: 0.5fr 1fr 0.5fr;
 	padding: 3em;
