--- a/src/styles/_job-finder.scss
+++ b/src/styles/_job-finder.scss
@@ -4,6 +4,7 @@ $font-family: "Inter", sans-serif;
 $text-color: #3f3f3f;
 $secondary-text: #5e666e;
 $primary-color: #4848ff;
+$bg-clr: #e8f2fb;
 
 ul {
     margin: 0;
