Updates - Add save jobs option on the Home page - Develop My job page

--- a/src/app/modules/job-finder/components/featured-job/featured-job.component.html
+++ b/src/app/modules/job-finder/components/featured-job/featured-job.component.html
@@ -8,33 +8,11 @@
                 <p class="company">Staker Parson Materials & Construction</p>
                 <p class="city">Atlanta, GA</p>
             </div>
-        </div>
-        <div class="section-content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi sint perferendis suscipit, voluptatibus vel aperiam provident quia magnam molestiae tempore.</p>
-        </div>
-        <div class="section-footer">
-            <div class="footer-content">
-                <img src="../../../../../assets/img/dollar_icon.png" alt="">
-                <p>6k - 8k / month</p>
-            </div>
-            <div class="footer-content">
-                <img src="../../../../../assets/img/people_icon.png" alt="">
-                <p>126 Applications</p>
-            </div>
-            <div class="footer-content">
-                <img src="../../../../../assets/img/location_point_icon.png" alt="">
-                <p>Remote</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="section-wrapper">
-        <div class="section-header">
-            <span class="img-wrapper"><img src="../../../../../assets/img/gitlab.png" alt=""></span>
-            <div class="header-wrapper">
-                <p class="title">Senior Unity Developer</p>
-                <p class="company">Staker Parson Materials & Construction</p>
-                <p class="city">Atlanta, GA</p>
+            <div>
+                <a href="#" (click)="saveJob($event)">
+                    <img src="../../../../../assets/img/save-icon.png" alt="">
+                    <span></span>
+                </a>
             </div>
         </div>
         <div class="section-content">
@@ -63,6 +41,46 @@
                 <p class="title">Senior Unity Developer</p>
                 <p class="company">Staker Parson Materials & Construction</p>
                 <p class="city">Atlanta, GA</p>
+            </div>
+            <div>
+                <a href="#" (click)="saveJob($event)">
+                    <img src="../../../../../assets/img/save-icon.png" alt="">
+                    <span></span>
+                </a>
+            </div>
+        </div>
+        <div class="section-content">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi sint perferendis suscipit, voluptatibus vel aperiam provident quia magnam molestiae tempore.</p>
+        </div>
+        <div class="section-footer">
+            <div class="footer-content">
+                <img src="../../../../../assets/img/dollar_icon.png" alt="">
+                <p>6k - 8k / month</p>
+            </div>
+            <div class="footer-content">
+                <img src="../../../../../assets/img/people_icon.png" alt="">
+                <p>126 Applications</p>
+            </div>
+            <div class="footer-content">
+                <img src="../../../../../assets/img/location_point_icon.png" alt="">
+                <p>Remote</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-wrapper">
+        <div class="section-header">
+            <span class="img-wrapper"><img src="../../../../../assets/img/gitlab.png" alt=""></span>
+            <div class="header-wrapper">
+                <p class="title">Senior Unity Developer</p>
+                <p class="company">Staker Parson Materials & Construction</p>
+                <p class="city">Atlanta, GA</p>
+            </div>
+            <div>
+                <a href="#" (click)="saveJob($event)">
+                    <img src="../../../../../assets/img/save-icon.png" alt="">
+                    <span></span>
+                </a>
             </div>
         </div>
         <div class="section-content">
