--- a/src/app/modules/job-finder/components/header/header.component.html
+++ b/src/app/modules/job-finder/components/header/header.component.html
@@ -11,7 +11,7 @@
 						>Home</a
 					>
 				</li>
-				<li><a href="#">My Jobs</a></li>
+				<li><a href="#" routerLink="./my-jobs" routerLinkActive="active">My Jobs</a></li>
 				<li><a href="#">Messages</a></li>
 				<li><a href="#">Community</a></li>
 				<li>
