--- a/src/styles/_job-finder.scss
+++ b/src/styles/_job-finder.scss
@@ -56,3 +56,40 @@ a {
         transform: translate(-50%, -50%);
     }
 }
+
+.suggest__header-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2em;
+  
+    img {
+      height: 24px;
+      width: 24px;
+    }
+  }
+  .suggest-box {
+    background: white;
+    padding: 1em;
+    border-radius: 10px;
+    margin-bottom: 1em;
+  }
+  .suggest__header {
+    display: flex;
+    align-items: center;
+  }
+  .suggest__title, .suggest__content {
+    margin-bottom: 0.5em;
+  }
+  .suggest__title {
+    font-weight: bold;
+  }
+  .suggest__content p{
+    font-size: 14px;
+    color: #878b8f;
+  }
+  .suggest__footer p{
+    margin-top: 2em;
+    font-size: 13px;
+    color: #858585;
+  }
