Post a jon component changes

--- a/src/app/modules/job-finder/components/header/header.component.html
+++ b/src/app/modules/job-finder/components/header/header.component.html
@@ -13,7 +13,6 @@
 				</li>
 				<li><a href="#" routerLink="./my-jobs" routerLinkActive="active">My Jobs</a></li>
 				<li><a href="#">Messages</a></li>
-				<li><a href="#">Community</a></li>
 				<li>
 					<a href="#" routerLink="./faq" routerLinkActive="active"
 						>FAQ</a
@@ -34,7 +33,7 @@
 					><app-svg-icon [svgIconId]="'user'"></app-svg-icon
 				></a>
 			</li>
-			<li><a href="#" class="btn-link">Post a job</a></li>
+			<li><a href="#" routerLink="post-job" class="btn-link">Post a job</a></li>
 		</ul>
 	</div>
 </div>
