--- a/src/styles/_job-finder.scss
+++ b/src/styles/_job-finder.scss
@@ -5,13 +5,18 @@ $text-color: #3f3f3f;
 $secondary-text: #5e666e;
 $primary-color: #4848ff;
 $bg-clr: #e8f2fb;
+$border-clr: #e4e4e4;
+
+.container {
+  padding: 3em;
+}
 
 ul {
     margin: 0;
     padding: 0;
 }
 
-h1,h2,h3,h4,h5,h6,a,p {
+h1,h2,h3,h4,h5,h6,a,p,label {
     font-family: $font-family;
     color: $text-color;
     letter-spacing: 0.15px;
