--- a/src/app/modules/job-finder/components/header/header.component.html
+++ b/src/app/modules/job-finder/components/header/header.component.html
@@ -29,7 +29,7 @@
 				></a>
 			</li>
 			<li>
-				<a href="#"
+				<a href="#" routerLink="profile"
 					><app-svg-icon [svgIconId]="'user'"></app-svg-icon
 				></a>
 			</li>
