--- a/src/styles.scss
+++ b/src/styles.scss
@@ -266,6 +266,12 @@ button svg {
   margin-right: 6px
 }
 
+.content-label svg {
+  width: 14px;
+  height: 14px;
+  margin-right: 6px;
+}
+
 /***** Form Error ******/
 .inline_error {
   color: $error-clr;
