--- a/src/app/modules/job-finder/components/profile/profile.component.html
+++ b/src/app/modules/job-finder/components/profile/profile.component.html
@@ -1,107 +1,113 @@
 <div class="container">
-    <div class="profile-wrapper">
-        <section class="banner">
-            <div class="profile-pic">
-                <img src="../../../../../assets/img/profile_icon.png" alt="">
-            </div>
-            <div class="profile-details">
-                <div class="title">
-                    <h2>Prashanth Kumar Sirikonda</h2>
-                    <p>Technical Officer</p>
-                </div>
-                <div class="details">
-                    <p>
-                        <img src="../../../../../assets/img/email.png" alt="">
-                        <span>john.doe@gmail.com</span>
-                    </p>
-                    <p>
-                        <img src="../../../../../assets/img/mobile.png" alt="">
-                        <span>+91-1234567890</span>
-                    </p>
-                    <p>
-                        <img src="../../../../../assets/img/location_point_icon.png" alt="">
-                        <span>New Delhi</span>
-                    </p>
-                </div>
-            </div>
-        </section>
-        <section class="main-content">
-            <div>
-                <h3>Preferences</h3>
-                <div class="content-section">
-                    <p class="content-label">
-                        <app-svg-icon svgIconId="location"></app-svg-icon>
-                        Preferred Location
-                    </p>
-                    <p>New Delhi</p>
-                </div>
-                <div class="content-section">
-                    <p class="content-label">
-                        <app-svg-icon svgIconId="rupee"></app-svg-icon>
-                        Preferred Salary
-                    </p>
-                    <span>20,00,000</span>
-                </div>
-                <div class="content-section">
-                    <p class="content-label">
-                        <app-svg-icon svgIconId="pencil"></app-svg-icon>
-                        Preferred Job Type
-                    </p>
-                    <p>Permanent</p>
-                </div>
-                <div class="content-section">
-                    <p class="content-label">
-                        <app-svg-icon svgIconId="spin"></app-svg-icon>
-                        Preferred Shift
-                    </p>
-                    <p>Regular</p>
-                </div>
-                <div class="content-section">
-                    <p class="content-label">
-                        <app-svg-icon svgIconId="pencil"></app-svg-icon>
-                        Preferred Employment Type
-                    </p>
-                    <p>Full Time</p>
-                </div>
-            </div>
-            <div>
-                <h3>Basic Details</h3>
-                <div class="content-section">
-                    <p class="content-label">
-                        <app-svg-icon svgIconId="suitcase"></app-svg-icon>
-                        Experience
-                    </p>
-                    <p>5 years 2 months</p>
-                </div>
-                <div class="content-section">
-                    <p class="content-label">
-                        <app-svg-icon svgIconId="location"></app-svg-icon>
-                        Location
-                    </p>
-                    <p>New Delhi</p>
-                </div>
-                <div class="content-section">
-                    <p class="content-label">
-                        <app-svg-icon svgIconId="rupee"></app-svg-icon>
-                        Salary
-                    </p>
-                    <p>11,00,000</p>
-                </div>
-                <div class="content-section">
-                    <p class="content-label">
-                        <app-svg-icon svgIconId="calendar"></app-svg-icon>
-                        Notice Period
-                    </p>
-                    <p>90 days</p>
-                </div>
-                <div class="content-section">
-                    <p class="content-label">
-                        <app-svg-icon svgIconId="pencil"></app-svg-icon>
-                        Job Type
-                    </p>
-                    <p>Permanent</p>
-                </div>
-            </div>
-        </section>
-    </div>
+	<div class="profile-wrapper">
+		<section class="banner">
+			<div class="profile-pic">
+				<img src="../../../../../assets/img/profile_icon.png" alt="" />
+			</div>
+			<div class="profile-details">
+				<div class="title">
+					<h2>John Doe</h2>
+					<p>Technical Officer</p>
+				</div>
+				<div class="details">
+					<p>
+						<img src="../../../../../assets/img/email.png" alt="" />
+						<span>john.doe@gmail.com</span>
+					</p>
+					<p>
+						<img
+							src="../../../../../assets/img/mobile.png"
+							alt=""
+						/>
+						<span>+91-1234567890</span>
+					</p>
+					<p>
+						<img
+							src="../../../../../assets/img/location_point_icon.png"
+							alt=""
+						/>
+						<span>New Delhi</span>
+					</p>
+				</div>
+			</div>
+		</section>
+		<section class="main-content">
+			<div>
+				<h3>Preferences</h3>
+				<div class="content-section">
+					<p class="content-label">
+						<app-svg-icon svgIconId="location"></app-svg-icon>
+						Preferred Location
+					</p>
+					<p>New Delhi</p>
+				</div>
+				<div class="content-section">
+					<p class="content-label">
+						<app-svg-icon svgIconId="rupee"></app-svg-icon>
+						Preferred Salary
+					</p>
+					<span>20,00,000</span>
+				</div>
+				<div class="content-section">
+					<p class="content-label">
+						<app-svg-icon svgIconId="pencil"></app-svg-icon>
+						Preferred Job Type
+					</p>
+					<p>Permanent</p>
+				</div>
+				<div class="content-section">
+					<p class="content-label">
+						<app-svg-icon svgIconId="spin"></app-svg-icon>
+						Preferred Shift
+					</p>
+					<p>Regular</p>
+				</div>
+				<div class="content-section">
+					<p class="content-label">
+						<app-svg-icon svgIconId="pencil"></app-svg-icon>
+						Preferred Employment Type
+					</p>
+					<p>Full Time</p>
+				</div>
+			</div>
+			<div>
+				<h3>Basic Details</h3>
+				<div class="content-section">
+					<p class="content-label">
+						<app-svg-icon svgIconId="suitcase"></app-svg-icon>
+						Experience
+					</p>
+					<p>5 years 2 months</p>
+				</div>
+				<div class="content-section">
+					<p class="content-label">
+						<app-svg-icon svgIconId="location"></app-svg-icon>
+						Location
+					</p>
+					<p>New Delhi</p>
+				</div>
+				<div class="content-section">
+					<p class="content-label">
+						<app-svg-icon svgIconId="rupee"></app-svg-icon>
+						Salary
+					</p>
+					<p>11,00,000</p>
+				</div>
+				<div class="content-section">
+					<p class="content-label">
+						<app-svg-icon svgIconId="calendar"></app-svg-icon>
+						Notice Period
+					</p>
+					<p>90 days</p>
+				</div>
+				<div class="content-section">
+					<p class="content-label">
+						<app-svg-icon svgIconId="pencil"></app-svg-icon>
+						Job Type
+					</p>
+					<p>Permanent</p>
+				</div>
+			</div>
+		</section>
+	</div>
 </div>
