#1 Better design for profile page

--- a/src/app/modules/job-finder/components/profile/profile.component.html
+++ b/src/app/modules/job-finder/components/profile/profile.component.html
@@ -34,78 +34,82 @@
 		<section class="main-content">
 			<div>
 				<h3>Preferences</h3>
-				<div class="content-section">
-					<p class="content-label">
-						<app-svg-icon svgIconId="location"></app-svg-icon>
-						Preferred Location
-					</p>
-					<p>New Delhi</p>
-				</div>
-				<div class="content-section">
-					<p class="content-label">
-						<app-svg-icon svgIconId="rupee"></app-svg-icon>
-						Preferred Salary
-					</p>
-					<span>20,00,000</span>
-				</div>
-				<div class="content-section">
-					<p class="content-label">
-						<app-svg-icon svgIconId="pencil"></app-svg-icon>
-						Preferred Job Type
-					</p>
-					<p>Permanent</p>
-				</div>
-				<div class="content-section">
-					<p class="content-label">
-						<app-svg-icon svgIconId="spin"></app-svg-icon>
-						Preferred Shift
-					</p>
-					<p>Regular</p>
-				</div>
-				<div class="content-section">
-					<p class="content-label">
-						<app-svg-icon svgIconId="pencil"></app-svg-icon>
-						Preferred Employment Type
-					</p>
-					<p>Full Time</p>
+				<div class="content-section-wrapper">
+					<div class="content-section">
+						<p class="content-label">
+							<app-svg-icon svgIconId="location"></app-svg-icon>
+							Preferred Location
+						</p>
+						<p>New Delhi</p>
+					</div>
+					<div class="content-section">
+						<p class="content-label">
+							<app-svg-icon svgIconId="rupee"></app-svg-icon>
+							Preferred Salary
+						</p>
+						<span>20,00,000</span>
+					</div>
+					<div class="content-section">
+						<p class="content-label">
+							<app-svg-icon svgIconId="pencil"></app-svg-icon>
+							Preferred Job Type
+						</p>
+						<p>Permanent</p>
+					</div>
+					<div class="content-section">
+						<p class="content-label">
+							<app-svg-icon svgIconId="spin"></app-svg-icon>
+							Preferred Shift
+						</p>
+						<p>Regular</p>
+					</div>
+					<div class="content-section">
+						<p class="content-label">
+							<app-svg-icon svgIconId="pencil"></app-svg-icon>
+							Preferred Employment Type
+						</p>
+						<p>Full Time</p>
+					</div>
 				</div>
 			</div>
 			<div>
 				<h3>Basic Details</h3>
-				<div class="content-section">
-					<p class="content-label">
-						<app-svg-icon svgIconId="suitcase"></app-svg-icon>
-						Experience
-					</p>
-					<p>5 years 2 months</p>
-				</div>
-				<div class="content-section">
-					<p class="content-label">
-						<app-svg-icon svgIconId="location"></app-svg-icon>
-						Location
-					</p>
-					<p>New Delhi</p>
-				</div>
-				<div class="content-section">
-					<p class="content-label">
-						<app-svg-icon svgIconId="rupee"></app-svg-icon>
-						Salary
-					</p>
-					<p>11,00,000</p>
-				</div>
-				<div class="content-section">
-					<p class="content-label">
-						<app-svg-icon svgIconId="calendar"></app-svg-icon>
-						Notice Period
-					</p>
-					<p>90 days</p>
-				</div>
-				<div class="content-section">
-					<p class="content-label">
-						<app-svg-icon svgIconId="pencil"></app-svg-icon>
-						Job Type
-					</p>
-					<p>Permanent</p>
+				<div class="content-section-wrapper">
+					<div class="content-section">
+						<p class="content-label">
+							<app-svg-icon svgIconId="suitcase"></app-svg-icon>
+							Experience
+						</p>
+						<p>5 years 2 months</p>
+					</div>
+					<div class="content-section">
+						<p class="content-label">
+							<app-svg-icon svgIconId="location"></app-svg-icon>
+							Location
+						</p>
+						<p>New Delhi</p>
+					</div>
+					<div class="content-section">
+						<p class="content-label">
+							<app-svg-icon svgIconId="rupee"></app-svg-icon>
+							Salary
+						</p>
+						<p>11,00,000</p>
+					</div>
+					<div class="content-section">
+						<p class="content-label">
+							<app-svg-icon svgIconId="calendar"></app-svg-icon>
+							Notice Period
+						</p>
+						<p>90 days</p>
+					</div>
+					<div class="content-section">
+						<p class="content-label">
+							<app-svg-icon svgIconId="pencil"></app-svg-icon>
+							Job Type
+						</p>
+						<p>Permanent</p>
+					</div>
 				</div>
 			</div>
 		</section>
